applications/1password/resources/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg-connect-api
  namespace: 1password
spec:
  gatewayClassName: merged-eg
  listeners:
    - name: connect-api-https
      protocol: TLS
      hostname: 'connect-api.${K_INFRA_NAME}.${K_ZONE_NAME}'
      port: 443
      tls:
        mode: Passthrough
