applications/1password/resources/tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: connect-api
  namespace: 1password
spec:
  parentRefs:
    - group: gateway.networking.k8s.io	
      kind: Gateway	
      name: eg-connect-api
  hostnames:
    - "connect-api.${K_INFRA_NAME}.${K_ZONE_NAME}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: onepassword-connect
          port: 8443
          weight: 1
